# oop_final_project

./: CMakeLists.txt  main.cpp  settings
include/: Settings.h  SettingsReader.h  SettingsWriter.h
include/Controller/: Controller.h
include/Model/: Card.h  CardContainer.h  CardDeck.h  Foundation.h  FoundationStack.h  GameBoard.h  Tableau.h  TableauStack.h  Waste.h
include/View/: CardContainerView.h  CardTextureAtlas.h  CardView.h  ContainerSubstrate.h  GameBoardView.h  MainWindow.h  SettingsDialog.h  StackLayoutView.h  TableauStackView.h  TextureManager.h
src/: Settings.cpp  SettingsReader.cpp  SettingsWriter.cpp
src/Controller/: Controller.cpp
src/Model/: CardContainer.cpp  CardDeck.cpp  Foundation.cpp  FoundationStack.cpp  GameBoard.cpp  Tableau.cpp  TableauStack.cpp  Waste.cpp
src/View/: CardContainerView.cpp  CardTextureAtlas.cpp  CardView.cpp  ContainerSubstrate.cpp  GameBoardView.cpp  MainWindow.cpp  MainWindow.ui  SettingsDialog.cpp  StackLayoutView.cpp  TableauStackView.cpp  TextureManager.cpp
test/: CMakeLists.txt  ModelTest.cpp
